# Provisioning-Windows

./: .gitignore  ARCHITECTURE.md  build.spec  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: inventory.py  kit_detector.py  orchestrator.py  powershell_runner.py  profile_loader.py  profile_manager_screen.py  task_runner.py  webhook.py
app/db/: database.py  repository.py
app/models/: __init__.py  app_config.py  device_metadata.py  enums.py  inventory_data.py  package_definition.py  profile_definition.py  task_definition.py
app/ui/: main_window.py  theme.py
app/ui/screens/: execution_screen.py  home_screen.py  metadata_screen.py  package_manager_screen.py  profile_screen.py  review_screen.py  summary_screen.py  webhook_settings_screen.py
app/ui/widgets/: __init__.py
app/utils/: admin.py  logger.py  paths.py
config/: app_config.json  manifest.json
profiles/: staff-office.json
scripts/: collect_inventory.ps1  configure_power.ps1  install_winget.ps1  rename_hostname.ps1
tests/: test_core.py
