[project]
name = "winprov"
version = "0.1.0"
description = "Windows Provisioning Tool for IT Support"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.5",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
